# uninote_mkdocs

./: pyproject.toml
.github/workflows/: azure-static-web-apps-icy-rock-07bbf031e.yml  deploy-site.yml
docs/: mkdocs.yml
docs/docs/: 2022-12-31-links-638080966255812154.md  2023-1-14-links-638093025594919888.md  2023-1-14-links-638093026529996061.md  2023-1-14-links-638093030536551723.md  2023-1-14-links-638093075544796095.md  2023-1-14-links-638093168260390712.md  2023-1-15-links-638093385085369207.md  2023-1-15-links-638093478587286569.md  2023-1-2-links-638082495259102696.md  2023-1-2-links-638082799083523134.md  2023-1-3-links-638083157512434481.md  2023-1-3-links-638083638161860582.md  2023-1-3-links-638083737463971439.md  2023-1-7-links-638087106566264381.md  2023-1-7-links-638087120548022318.md  2023-1-8-links-638087537214347679.md  2023-1-8-links-638087543744322814.md  2023-1-8-links-638087544518629183.md  2023-1-8-links-638087545298231378.md  2023-1-8-links-638087550935558631.md  2023-1-8-links-638087551170755891.md  2023-1-8-links-638087551624431500.md  index.md  mynote.md
docs/source/equinor-example/chapter_1/: foobar.md
