[tool.poetry]
name = "virtual-env"
version = "0.1.0"
description = ""
authors = ["Dr. Gerald Haslhofer <haslhofer@outlook.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
mkdocs-plugin-tags = "^1.0.2"
jinja2 = "3.0.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
